[gd_scene load_steps=8 format=3 uid="uid://e6o5tqrhwqgv"]

[ext_resource type="Script" path="res://Scripts/cloud_toxic.gd" id="1_f5vfk"]

[sub_resource type="Curve" id="Curve_3fh5k"]
_data = [Vector2(0.0036036, 0.0837194), 0.0, 0.0, 0, 0, Vector2(0.996396, 0.324619), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_f6car"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_re38b"]
radius = 1.0

[sub_resource type="Animation" id="Animation_ghecu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudToxic/CloudPoisonParticules:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudToxic/rangeParticle:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudToxic/rangeParticle:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CloudToxic/rangeParticle/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_54385"]
resource_name = "playParticle"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudToxic/CloudPoisonParticules:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudToxic/rangeParticle:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 23, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.0666667, 5.66667, 10)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CloudToxic/rangeParticle:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 23, -0.25, 0, 0.25, 0, 38, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.0666667, 5.66667, 10)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CloudToxic/rangeParticle/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0666667, 9.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wkosg"]
_data = {
"RESET": SubResource("Animation_ghecu"),
"playParticle": SubResource("Animation_54385")
}

[node name="CloudToxic" type="Node2D"]
z_index = 2
script = ExtResource("1_f5vfk")

[node name="CloudPoisonParticules" type="CPUParticles2D" parent="."]
modulate = Color(0.12177, 0.68329, 0, 0.843137)
emitting = false
amount = 1000
lifetime = 2.0
one_shot = true
speed_scale = 0.2
explosiveness = 1.0
randomness = 0.1
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 70.0
angular_velocity_min = 0.1
angular_velocity_max = 0.1
linear_accel_min = -15.33
linear_accel_max = -11.14
scale_amount_min = 0.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_3fh5k")
color_ramp = SubResource("Gradient_f6car")

[node name="rangeParticle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rangeParticle"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_re38b")

[node name="TimerPoison" type="Timer" parent="."]

[node name="AnimationPlayerParticles" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_wkosg")
}

[connection signal="body_entered" from="rangeParticle" to="." method="_on_range_particle_body_entered"]
[connection signal="body_exited" from="rangeParticle" to="." method="_on_range_particle_body_exited"]
[connection signal="timeout" from="TimerPoison" to="." method="_on_timer_poison_timeout"]
[connection signal="animation_finished" from="AnimationPlayerParticles" to="." method="_on_animation_player_particles_animation_finished"]
